# Image_Classifier

./: README.md  pyproject.toml
.github/workflows/: python-package-conda.yml
Data_Preparation/: data_preparation.py
Model/: model.py
Model training/: training.py
Model_testing/: test.py
Model_training/: training.py
src/Model/: model.py
