[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Image_Classifier"
version = "0.1.0"
description = "Image classifier with CNN"
authors = [{name = "Ronald Batchewoua", email = "ronaldbatch11@gmail.com"}]
dependencies = [
    "requests",  
    "pytoch",
    "torch",
    "tqdm"

]

